--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -91,9 +91,13 @@
      <Compile Include="Assets\Scripts\OpenDoorTrigger.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\Trigger.cs" />
+     <None Include="Assets\Models\Placeholder for Models.txt" />
      <None Include="Assets\LeanTween\Examples\Archived\2dUnlitWithFade.shader" />
      <None Include="Assets\LeanTween\ReadMe.txt" />
+     <None Include="Assets\Prefabs\Placeholder for Prefabs.txt" />
+     <None Include="Assets\Textures\Placeholder for Textures.txt" />
      <None Include="Assets\LeanTween\License.txt" />
+     <None Include="Assets\Resources\Placeholder for Resources.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>B:/Unity 2017.3/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
