--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -88,10 +88,12 @@
      <Compile Include="Assets\Scripts\CameraPointing.cs" />
      <Compile Include="Assets\Scripts\DoorOpener.cs" />
      <Compile Include="Assets\Scripts\DreamworldObject.cs" />
+     <Compile Include="Assets\Scripts\ItemController.cs" />
      <Compile Include="Assets\Scripts\LevelController.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\Triggers\EnvironmentTrigger.cs" />
      <Compile Include="Assets\Scripts\Triggers\InteractTrigger.cs" />
+     <Compile Include="Assets\Scripts\Triggers\ItemTrigger.cs" />
      <Compile Include="Assets\Scripts\Triggers\OpenDoorTrigger.cs" />
      <Compile Include="Assets\Scripts\Triggers\Trigger.cs" />
      <None Include="Assets\Models\Placeholder for Models.txt" />
