--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ Library/shadercompiler-UnityShaderCompiler.exe0.log
 Library/CurrentLayout.dwlt
 Library/CurrentLayout.dwlt
 Library/CurrentLayout.dwlt
+Library/CurrentLayout.dwlt
