--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -107,6 +107,8 @@
      <Compile Include="Assets\Scripts\Triggers\ItemTrigger.cs" />
      <Compile Include="Assets\Scripts\Triggers\OpenDoorTrigger.cs" />
      <Compile Include="Assets\Scripts\Triggers\Trigger.cs" />
+     <Compile Include="Assets\Scripts\UI\ExitGame.cs" />
+     <Compile Include="Assets\Scripts\UI\UIController.cs" />
      <Compile Include="Assets\Scripts\Utility\Constants.cs" />
      <Compile Include="Assets\Scripts\Utility\LocalMaths.cs" />
      <None Include="Assets\Models\Placeholder for Models.txt" />
