--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Assets\Scripts\UI\ExitGame.cs" />
     <Compile Include="Assets\Scripts\UI\UIController.cs" />
     <Compile Include="Assets\Scripts\Utility\Constants.cs" />
+    <Compile Include="Assets\Scripts\Utility\CutsceneController.cs" />
     <Compile Include="Assets\Scripts\Utility\LocalMaths.cs" />
     <None Include="Assets\Models\Placeholder for Models.txt" />
     <None Include="Assets\LeanTween\Examples\Archived\2dUnlitWithFade.shader" />
