Tutorial Quest - first Push

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Quests\QuestController.cs" />
     <Compile Include="Assets\Scripts\Quests\QuestPrologController.cs" />
+    <Compile Include="Assets\Scripts\Quests\QuestTutorial.cs" />
     <Compile Include="Assets\Scripts\RoomDirection.cs" />
     <Compile Include="Assets\Scripts\Scriptable Objects\Fear.cs" />
     <Compile Include="Assets\Scripts\Scriptable Objects\FearTriggerType.cs" />
