--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -124,9 +124,12 @@
     <Compile Include="Assets\Scripts\Sound\playerSounds_control.cs" />
     <Compile Include="Assets\Scripts\StageController.cs" />
     <Compile Include="Assets\Scripts\ThunderstormController.cs" />
+    <Compile Include="Assets\Scripts\Triggers\Breadtin.cs" />
     <Compile Include="Assets\Scripts\Triggers\EnvironmentTrigger.cs" />
     <Compile Include="Assets\Scripts\Triggers\InteractTrigger.cs" />
     <Compile Include="Assets\Scripts\Triggers\ItemTrigger.cs" />
+    <Compile Include="Assets\Scripts\Triggers\LightTrigger.cs" />
+    <Compile Include="Assets\Scripts\Triggers\StandupInhibitor.cs" />
     <Compile Include="Assets\Scripts\Triggers\ThunderTrigger.cs" />
     <Compile Include="Assets\Scripts\Triggers\Trigger.cs" />
     <Compile Include="Assets\Scripts\UI\ExitGame.cs" />
