Push 28.8. Treppen final, Türanimation final, other stuff

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Assets\Scripts\Scriptable Objects\FearTriggerType.cs" />
     <Compile Include="Assets\Scripts\Scriptable Objects\GameEvent.cs" />
     <Compile Include="Assets\Scripts\Scriptable Objects\RegisterEvent.cs" />
+    <Compile Include="Assets\Scripts\Scriptable Objects\SceneManager.cs" />
     <Compile Include="Assets\Scripts\Scriptable Objects\ThunderType.cs" />
     <Compile Include="Assets\Scripts\Sound\playerSounds_control.cs" />
     <Compile Include="Assets\Scripts\StageController.cs" />
@@ -140,6 +141,8 @@
     <Compile Include="Assets\Scripts\Triggers\ThunderTrigger.cs" />
     <Compile Include="Assets\Scripts\Triggers\Trigger.cs" />
     <Compile Include="Assets\Scripts\UI\ExitGame.cs" />
+    <Compile Include="Assets\Scripts\UI\GameEventRaiser.cs" />
+    <Compile Include="Assets\Scripts\UI\PanelActivator.cs" />
     <Compile Include="Assets\Scripts\UI\UIController.cs" />
     <Compile Include="Assets\Scripts\UI\UpdatePanel.cs" />
     <Compile Include="Assets\Scripts\Utility\AnimatorBoolSetter.cs" />
