Credits + UI-Update + Stairs Bugfix + Dreamworld Objects Delay

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Assets\Scripts\UI\ExitGame.cs" />
     <Compile Include="Assets\Scripts\UI\GameEventRaiser.cs" />
     <Compile Include="Assets\Scripts\UI\PanelActivator.cs" />
+    <Compile Include="Assets\Scripts\UI\UIActiveButtonWaiter.cs" />
     <Compile Include="Assets\Scripts\UI\UIController.cs" />
     <Compile Include="Assets\Scripts\UI\UpdatePanel.cs" />
     <Compile Include="Assets\Scripts\Utility\AnimatorBoolSetter.cs" />
