--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Assets\Scripts\UI\UIController.cs" />
     <Compile Include="Assets\Scripts\UI\UpdatePanel.cs" />
     <Compile Include="Assets\Scripts\Utility\AnimatorBoolSetter.cs" />
+    <Compile Include="Assets\Scripts\Utility\CameraPostProEffects.cs" />
     <Compile Include="Assets\Scripts\Utility\ConditionalHideAttribute.cs" />
     <Compile Include="Assets\Scripts\Utility\Constants.cs" />
     <Compile Include="Assets\Scripts\Utility\CutsceneController.cs" />
